<resources>
    <string name="app_name">Album Store</string>
    <string name="search_hint">Search…</string>
    <string name="album_title_hint">Album Title</string>
    <string name="artist_hint">Artist</string>
    <string name="album_image_desc">Album icon</string>
    <string name="album_art_desc">Album Cover</string>
    <string name="album_artist_hint">Artist Names - separated by ;</string>
    <string name="album_genre_hint">Genre</string>
    <string name="album_art_url_hint">Album Art (URL)</string>
    <string name="album_released_hint">Year Released</string>
    <string name="album_quantity_hint">Quantity in stock</string>
    <string name="submit">Submit</string>
    <string name="add_new_album">Add New Album</string>
    <string name="update_submit_text">Update</string>
    <string name="update_remove_text">Remove</string>
    <string name="menu_library_title">Library</string>
    <string name="nav_add_album_title">Add Album</string>
</resources>