<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickHandler"
            type="com.northcoders.albumstore.ui.updatealbum.UpdateAlbumClickHandlers" />

        <variable
            name="album"
            type="com.northcoders.albumstore.model.Album" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/album_form_outer_margin"
        tools:context=".ui.updatealbum.UpdateAlbumActivity">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/update_album_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/album_form_outer_margin"
            android:backgroundTint="?attr/colorTertiary"
            android:onClick="@{clickHandler::onCancel}"
            android:src="@drawable/baseline_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:maxImageSize="48dp"
            app:tint="?attr/colorOnPrimary" />

        <Button
            android:id="@+id/update_album_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="?attr/colorError"
            android:onClick="@{clickHandler::onRemove}"
            android:text="@string/update_remove_text"
            app:layout_constraintEnd_toStartOf="@id/update_album_submit"
            app:layout_constraintTop_toBottomOf="@id/update_album_art_url" />

        <Button
            android:id="@+id/update_album_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{clickHandler::onSubmit}"
            android:text="@string/update_submit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_album_art_url" />

        <EditText
            android:id="@+id/update_album_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:ems="10"
            android:hint="@string/album_title_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={album.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--
            TODO: support multiple artists
                or drop multi-artist support on the backend
        -->
        <EditText
            android:id="@+id/update_album_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:ems="10"
            android:hint="@string/album_artist_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={album.artists}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_album_title" />

        <EditText
            android:id="@+id/update_album_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:ems="10"
            android:hint="@string/album_genre_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={album.genre}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_album_artist" />

        <EditText
            android:id="@+id/update_album_released"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:ems="10"
            android:hint="@string/album_released_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@={album.released}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_album_genre" />

        <EditText
            android:id="@+id/update_album_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:ems="10"
            android:hint="@string/album_quantity_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@={`` + album.quantity}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_album_released" />


        <EditText
            android:id="@+id/update_album_art_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:ems="10"
            android:hint="@string/album_art_url_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:text="@={album.albumArtUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_album_qty" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
