<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="album"
            type="com.northcoders.albumstore.model.Album" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="2.5dp"
        android:backgroundTint="@color/material_dynamic_neutral90"
        android:elevation="10dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/album_art"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:adjustViewBounds="true"
                android:background="@android:color/secondary_text_dark"
                android:contentDescription="@string/album_art_desc"
                android:scaleType="fitCenter"
                app:fallbackImage="@{@drawable/baseline_audiotrack_white_transparent}"
                app:layout_constraintBottom_toTopOf="@id/album_info"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loadImage="@{album.albumArtUrl}" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:alpha="0.8"
                android:contentDescription="@string/album_image_desc"
                android:src="@drawable/baseline_library_music"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/album_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album_art">

                <TextView
                    android:id="@+id/album_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/album_title_hint"
                    android:text="@{album.title}"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread_inside" />

                <TextView
                    android:id="@+id/artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/album_title"
                    android:autoSizeTextType="uniform"
                    android:hint="@string/artist_hint"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@{album.artists}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/album_title"
                    app:layout_constraintStart_toStartOf="@id/album_title"
                    app:layout_constraintTop_toBottomOf="@id/album_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
